# CozyNet

./: .gitignore  CMakeLists.txt  README.md
Include/: Client.h  CozyNet.h  Server.h
Include/Utils/: Connection.h  Constants.h  Endpoint.h  Packet.h  Packet2.h  Socket.h
Old/Version 1/Include/: CozyNet.h  Server.h
Old/Version 1/Include/Utils/: Endpoint.h
Old/Version 1/Source/: Server.cpp  main.cpp
Old/Version 1/Source/Utils/: Connection.cpp  Packet.cpp  Socket.cpp
Old/Version 2/: CMakeLists.txt
Old/Version 2/Include/: Server.h
Old/Version 2/Source/: main.cpp
Source/: Client.cpp  CozyNet.cpp  Server.cpp  main.cpp
Source/Utils/: Connection.cpp  Endpoint.cpp  Packet.cpp  Packet2.cpp
